<resources>
    <string name="app_name">Trip Tracker</string>
    <string name="registration_activity_name">Registration</string>
    <string name="trip_list_activity_name">Trips</string>
    <string name="edit_trip_activity_name">Edit Trip</string>
    <string name="view_trip_activity_name">View Trip</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Re-type Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="log_in_button_text">Log In</string>
    <string name="sign_up_button_text">Register</string>
    <string name="forgot_password_button_text">Password?</string>

    <string name="trip_name_hint">Trip Name</string>
    <string name="trip_desc_hint">Description</string>

    <string name="default_trip_text">Trip Name</string>
    <string name="default_trip_creator_text">Created by {USER} on {DATE}</string>
    <string name="default_date_text">00/00/0000</string>

    <string name="start_date_text">Start Date</string>
    <string name="end_date_text">End Date</string>
    <string name="is_public_text">Public?</string>

    <string name="edit_trip_text">Edit</string>
    <string name="delete_trip_text">Delete</string>

    <string name="help_text">Help</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>

    <string name="trip_list_my_trips">My Trips</string>
    <string name="trip_list_all_trips">Public Trips</string>

    <string name="icon_desc">The icon for the app</string>
    <string name="name_icon_desc">The icon for name</string>
    <string name="username_icon_desc">The icon for username</string>
    <string name="password_icon_desc">The icon for password</string>
    <string name="email_icon_desc">The icon for email</string>
    <string name="trip_icon_desc">The icon for a trip</string>
    <string name="trip_dropdown_icon_desc">The icon for the trip drop down</string>
    <string name="save_trip_icon_desc">The icon for saving the trip</string>
    <string name="cancel_trip_icon_desc">The icon for cancelling the changes made to the trip</string>
</resources>
