<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/name_input_field"
        android:hint="@string/name_hint"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_input_field"
        android:layout_marginTop="16dp"
        android:id="@+id/username_input_field"
        android:hint="@string/username_hint"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input_field"
        android:layout_marginTop="16dp"
        android:id="@+id/password_input_field"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_field"
        android:layout_marginTop="16dp"
        android:id="@+id/retype_password_input_field"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retype_password_input_field"
        android:layout_marginTop="16dp"
        android:id="@+id/email_input_field"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input_field"
        android:layout_marginTop="16dp"
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up_button_text" />

</RelativeLayout>