<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context=".LoginActivity">

    <!-- ICON -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/login_icon"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/icon_desc" />


    <!-- USERNAME -->

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_icon"
        android:padding="8dp"
        android:id="@+id/username_icon"
        android:background="#dddddd"
        android:src="@drawable/ic_supervisor_account_black_24dp"
        android:tint="#eeeeee"
        android:contentDescription="@string/username_icon_desc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username_icon"
        android:layout_alignTop="@+id/username_icon"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/username_icon"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:id="@+id/username_input_field"
        android:background="#ffffff"
        android:hint="@string/username_hint"
        android:singleLine="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/username_input_field"
        android:layout_alignBottom="@+id/username_input_field"
        android:layout_alignTop="@+id/username_input_field"
        android:padding="4dp"
        android:id="@+id/remember_username_check_box" />


    <!-- PASSWORD -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/username_icon"
        android:layout_alignEnd="@+id/username_icon"
        android:layout_alignStart="@+id/username_icon"
        android:layout_marginTop="2dp"
        android:padding="8dp"
        android:id="@+id/password_icon"
        android:background="#dddddd"
        android:src="@android:drawable/ic_lock_idle_lock"
        android:tint="#eeeeee"
        android:contentDescription="@string/password_icon_desc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_icon"
        android:layout_alignTop="@+id/password_icon"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/password_icon"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:id="@+id/password_input_field"
        android:background="#ffffff"
        android:textColor="@android:color/black"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_input_field"
        android:layout_alignBottom="@+id/password_input_field"
        android:layout_alignTop="@+id/password_input_field"
        android:padding="4dp"
        android:id="@+id/remember_password_check_box" />


    <!-- LOG IN -->

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_field"
        android:layout_marginTop="5dp"
        android:padding="25dp"
        android:id="@+id/login_button"
        android:backgroundTint="@color/colorButton"
        android:textColor="@android:color/white"
        android:text="@string/log_in_button_text" />


    <!-- REGISTER -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up_button_text" />


    <!-- FORGOT PASSWORD -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/forgot_password_button"
        android:text="@string/forgot_password_button_text" />

</RelativeLayout>
